--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">tes news.api</string>
     <string name="busines">busines</string>
     <string name="bbc_news">BBC-News</string>
+    <string name="todo">TODO</string>
 </resources>
